force-app/main/default/objects/Campaign_Type_Member_Status__mdt/Campaign_Type_Member_Status__mdt.object-meta.xml
<CustomObject>
    <description>This metadata type defines Protected campaign member status values. Campaigns with specific Type values will be given specific campaign member status values, and if those values are changed they will be reinstated</description>
    <label>Campaign Type Member Status</label>
    <pluralLabel>Campaign Type Member Statuses</pluralLabel>
</CustomObject>