force-app/main/default/objects/Campaign_Type_Member_Status__mdt/fields/Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status__c</fullName>
    <label>Protected Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>