force-app/main/default/objects/Campaign_Type_Member_Status__mdt/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>The Campaign Type (not record type) for this Protected Status</description>
    <inlineHelpText>This is the actual value for the Campaign&apos;s Type field.</inlineHelpText>
    <label>Campaign Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>