force-app/main/default/objects/Campaign_Type_Member_Status__mdt/fields/HasResponded__c.field-meta.xml
<CustomField>
    <fullName>HasResponded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this if this Status should be marked as Responded</inlineHelpText>
    <label>Responded</label>
    <type>Checkbox</type>
</CustomField>