force-app/main/default/objects/Campaign_Type_Member_Status__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Campaign_Type__c</columns>
    <columns>Campaign_Member_Status__c</columns>
    <columns>IsDefault__c</columns>
    <columns>HasResponded__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>